# openpenny

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES-LICENSES.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake
docs/: README.md  docs-index.md  layout.md
docs/dev/: active-passive-overview.md  drop-snapshot-flow.md  grpc-config-example.json  grpc-override-format.md  grpc-summary-example.json  penny-api.md
docs/ops/: install-and-build.md
docs/run/: cli-guide.md  cli-readme.md  grpc-client-example.md  grpc-guide.md
examples/: README.md  grpc_active_example.py  grpc_client.py  grpc_passive_example.py
examples/configs/: config_default.yaml  config_schema.json
include/openpenny/agg/: Stats.h
include/openpenny/app/cli/: cli_helpers.h  source_setup.h
include/openpenny/app/core/: ActiveTestPipeline.h  AggregatesController.h  DropCollectorBinding.h  OpenpennyPipelineDriver.h  PassiveTestPipeline.h  PerThreadStats.h  RuntimeSetup.h  WorkerLauncher.h
include/openpenny/app/core/utils/: FlowDebug.h
include/openpenny/config/: Config.h
include/openpenny/grpc/: PennyService.h
include/openpenny/log/: Log.h
include/openpenny/net/: Packet.h  PacketParser.h  PacketSourceFactory.h
include/openpenny/penny/flow/engine/: FlowEngine.h  FlowEvaluation.h
include/openpenny/penny/flow/manager/: ThreadFlowManager.h
include/openpenny/penny/flow/state/: PennySnapshot.h  PennyStats.h
include/openpenny/penny/flow/timer/: ThreadFlowEventTimer.h
include/openpenny/sources/dpdk/: DpdkReader.h
include/openpenny/sources/xdp/: XdpReader.h
proto/: penny.proto
scripts/: install_dependencies.sh  install_dependencies_arch.sh  install_dependencies_suse.sh  install_dependencies_ubuntu.sh  xdp_attach.py
src/agg/: Stats.cpp
src/app/cli/: cli_helpers.cpp  penny_cli.cpp  source_setup.cpp
src/app/core/: AggregatesController.cpp  DropCollectorBinding.cpp  OpenpennyPipelineDriver.cpp  PerThreadStats.cpp  RuntimeSetup.cpp  WorkerLauncher.cpp
src/app/core/active/: ActiveTestPipeline.cpp
src/app/core/passive/: PassiveTestPipeline.cpp
src/app/core/utils/: FlowDebug.cpp
src/app/grpc/: pennyd.cpp
src/app/worker/: penny_worker.cpp
src/config/: Config.cpp
src/grpc/: PennyService.cpp
src/log/: Log.cpp
src/net/: PacketParser.cpp  PacketSourceFactory.cpp
src/penny/flow/engine/: FlowEngine.cpp  FlowEvaluation.cpp
src/penny/flow/manager/: ThreadFlowManager.cpp
src/penny/flow/state/: PennyStats.cpp
src/penny/flow/timer/: ThreadFlowEventTimer.cpp
src/sources/dpdk/: DpdkReader.cpp
src/sources/xdp/: XdpReader.cpp
tests/: test_cli_options.cpp  test_drop_snapshot_updates.cpp  test_drop_timer.cpp  test_flow_thresholds.cpp  test_gap_management.cpp  test_initial_flow_monitoring.cpp  test_sequence_ordering.cpp
traffic_generator/: README.md  client.py  mixed_traffic.py  requirements.txt  server.py  spoofed_client.py
xdp-fw/: Makefile  README.md  cleanxdp.sh  disable_xdp.sh  xdp_redirect_dstprefix.c  xsk_print_forward.cpp
